<resources>
    <string name="app_name">Team Up!</string>

    <!-- ======================= LOGIN ======================= -->
    <string name="login_title">Connexion</string>
    <string name="login_hint_login">Identifiant</string>
    <string name="login_hint_password">Mot de passe</string>
    <string name="login_button_login">Se connecter</string>
    <string name="login_button_subscription">S\'inscrire</string>
    <string name="ERR_LOGIN_WRONG_LOGIN_AND_PASSWORD">Identifiant ou mot de passe incorrect.</string>

    <!-- ======================= SUBSCRIPTION ======================= -->
    <string name="sub_title">Inscription</string>
    <string name="sub_identity">Identité</string>
    <string name="sub_localisation">Adresse</string>
    <string name="sub_name">Nom</string>
    <string name="sub_firstname">Prénom</string>
    <string name="sub_age">Date de naissance</string>
    <string name="sub_sex">Sexe</string>
    <string name="sub_address">Adresse</string>
    <string name="sub_city">Ville</string>
    <string name="sub_country">Pays</string>
    <string name="sub_identifiers">Identifiants</string>
    <string name="sub_email">Adresse mail</string>
    <string name="sub_login">Identifiant</string>
    <string name="sub_password">Mot de passe</string>
    <string name="sub_password_confirm">Confirmation du mot de passe</string>
    <string name="sub_button_subscribe">S\'inscrire</string>
    <string name="ERR_SUBSCRIPTION_FIELDS_EMPTY">Veuillez remplir tous les champs obligatoires.</string>
    <string name="ERR_SUBSCRIPTION_LOGIN_ALREADY_EXISTS">Cet identifiant est déjà pris. Veuillez en choisir un autre.</string>
    <string name="ERR_SUBSCRIPTION_EMAIL_FORMAT_INVALID">Le format de l\'adresse mail est invalide.</string>

    <string-array name="country_list">
        <item>Allemagne</item>
        <item>Angleterre</item>
        <item>Chine</item>
        <item>Espagne</item>
        <item>Etats-Unis</item>
        <item>France</item>
        <item>Japon</item>
        <item>Mali</item>
        <item>Pologne</item>
        <item>Portugal</item>
        <item>Zimbabwe</item>
    </string-array>

    <string-array name="genders">
        <item>Non spécifié</item>
        <item>Femme</item>
        <item>Homme</item>
        <item>Autre</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
