<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fr.thiboud.teamup.fragments.LoginFragment"
    tools:layout="@layout/fragment_login">

    <data>
        <variable
            name="viewmodel"
            type="fr.thiboud.teamup.viewmodel.LoginViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="6sp">

            <LinearLayout
                android:id="@+id/ly_headers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/tv_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="32sp"
                    android:textAlignment="center"
                    android:text="@string/app_name"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="24sp"
                    android:textAlignment="textStart"
                    android:text="@string/login_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_header" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ev_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ly_headers">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_login"
                    android:inputType="text"
                    android:text="@={viewmodel.user.login}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ev_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ev_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_password"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.user.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_validate"
                android:onClick="@{() -> viewmodel.onValidateLogin()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ev_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_subscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_subscription"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bt_validate" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/tv_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</layout>
