<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SubscriptionFragment"
    tools:layout="@layout/subscription_fragment">

    <data>
        <import type="fr.thiboud.teamup.fragments.LongConverter"/>
        <variable
            name="viewmodel"
            type="fr.thiboud.teamup.viewmodel.SubscriptionViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="6sp">

            <TextView
            android:id="@+id/tv_sub_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="32sp"
            android:textAlignment="center"
            android:text="@string/sub_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ly_identifiers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_sub_header">

                <TextView
                    android:id="@+id/tv_sub_header_identifiers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:text="@string/sub_identifiers"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ev_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_sub_header_identifiers">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sub_email"
                        android:inputType="textEmailAddress"
                        android:text="@={viewmodel.user.email}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ev_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ev_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sub_login"
                        android:inputType="text"
                        android:text="@={viewmodel.user.login}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ev_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ev_login">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sub_password"
                        android:inputType="textPassword"
                        android:text="@={viewmodel.user.password}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@id/ly_identifiers">

                <TextView
                    android:id="@+id/tv_sub_header_identity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:text="@string/sub_identity"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ev_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sub_name"
                        android:inputType="textPersonName"
                        android:text="@={viewmodel.user.lastname}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ev_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ev_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sub_firstname"
                        android:inputType="textPersonName"
                        android:text="@={viewmodel.user.firstname}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ev_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ev_firstname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sub_age"
                        android:inputType="date"
                        android:focusable="false"
                        android:text="@={LongConverter.dateToString(viewmodel.user.birthdayDate)}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ev_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ev_age">

                    <Spinner
                        android:id="@+id/gender_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/genders"
                        android:layout_marginTop="15dp"
                        tools:setOnItemSelectedListener="@{viewmodel.genderClicksListener}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_localisation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@id/ly_identity">

                <TextView
                    android:id="@+id/tv_sub_header_localisation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:text="@string/sub_localisation"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ev_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_sub_header_localisation">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sub_address"
                        android:inputType="textCapWords"
                        android:text="@={viewmodel.user.address}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ev_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ev_address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sub_city"
                        android:inputType="textAutoComplete"
                        android:text="@={viewmodel.user.city}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ev_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ev_city">

                    <Spinner
                        android:id="@+id/country_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/country_list"
                        android:layout_marginTop="15dp"
                        tools:setOnItemSelectedListener="@{viewmodel.countryClicksListener}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_subscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:onClick="@{() -> viewmodel.onValidateSubscription()}"
                android:text="@string/sub_button_subscribe"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ly_localisation" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>